Bug 408351 - Crash in Octave plot command
Summary: Crash in Octave plot command
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: octave-backend (other bugs)
Version First Reported In: 19.04
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-05 17:01 UTC by Nikita Sirgienko
Modified: 2021-03-05 08:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nikita Sirgienko 2019-06-05 17:01:03 UTC
SUMMARY
Unexpected crash on plot code


STEPS TO REPRODUCE
1. Open lorenzSystem.cws Octave example
2. Remove the line with `view`
3. Press 'Evaluate Worksheet' # OK
4. Restart the backend  # OK
5. Press 'Evaluate Worksheet' again # Segfault:

OBSERVED RESULT
Cantor crashs

EXPECTED RESULT
The plot result appears

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Ubuntu 18.04.2 LTS
(available in About System)
KDE Frameworks Version: 5.49
Qt Version: 5.9.5
Comment 1 Nikita Sirgienko 2019-06-06 10:30:17 UTC
Git commit 05f3044297f7dddb3666ad279b7ff3c92501c167 by Nikita Sirgienko.
Committed on 06/06/2019 at 10:28.
Pushed by sirgienko into branch 'Applications/19.04'.

[Octave] Some imporovments
  - Remove KDir watch from OctaveSession
  - Remove tempdir calculation from OctaveSession
  - Use individual temporary file for each expression
FIXED-IN: 19.04.3

M  +76   -39   src/backends/octave/octaveexpression.cpp
M  +6    -6    src/backends/octave/octaveexpression.h
M  +4    -54   src/backends/octave/octavesession.cpp
M  +0    -3    src/backends/octave/octavesession.h
M  +1    -2    src/backends/octave/scripts/cantor_plot2d.m
M  +1    -2    src/backends/octave/scripts/cantor_plot3d.m
M  +3    -3    src/backends/octave/scripts/cantor_print.m.in
M  +27   -0    src/backends/octave/testoctave.cpp
M  +1    -0    src/backends/octave/testoctave.h

https://commits.kde.org/cantor/05f3044297f7dddb3666ad279b7ff3c92501c167